fixe playlsit controler
