# src/routes/playlist.routes.js
@@ -1,6 +1,6 @@
 import { Router } from "express";
 import { verifyJwt } from "../middlewares/auth.middleware.js";
-import { addVideoToPlaylist, createPlaylist, deletePlaylist, removeVideoFromPlaylist, updatePlaylist } from "../controllers/playlist.controller.js";
+import { addVideoToPlaylist, createPlaylist, deletePlaylist, getPlaylistbyId, getUserPlaylist, removeVideoFromPlaylist, updatePlaylist } from "../controllers/playlist.controller.js";
 
 const router=Router()
 //take name ans discription
@@ -13,4 +13,6 @@ router.route("/deletePlaylist/:playlistId").delete(verifyJwt,deletePlaylist)
 router.route("/addVideoToPlaylist/:playlistId").post(verifyJwt,addVideoToPlaylist)
 // take playlistID and videoID
 router.route("/removeVideoFromPlaylist/:playlistId").delete(verifyJwt,removeVideoFromPlaylist)
+router.route("/getUserPlaylist/:userId").get(verifyJwt,getUserPlaylist)
+router.route("/getPlaylistbyId/:playlistId").get(verifyJwt,getPlaylistbyId)
 export default router
