# src/swagger.yaml
@@ -553,7 +553,7 @@ paths:
         '200':
           description: Video deleted successfully
 
-  /playlist/create:
+  /playlist/createPlaylist:
     post:
       summary: Create a new playlist
       tags:
@@ -618,7 +618,7 @@ paths:
         '200':
           description: Playlist deleted successfully
 
-  /addVideoToPlaylist/{playlistId}:
+  /playlist/addVideoToPlaylist/{playlistId}:
     post:
       summary: Add a video to a playlist
       tags:
@@ -646,7 +646,7 @@ paths:
         '200':
           description: Video added to playlist successfully
 
-  /removeVideoFromPlaylist/{playlistId}:
+  /playlist/removeVideoFromPlaylist/{playlistId}:
     post:
       summary: Add a video to a playlist
       tags:
@@ -673,6 +673,60 @@ paths:
       responses:
         '200':
           description: Video removed from playlist successfully
+          
+  /playlist/getUserPlaylist/{userId}:
+    get:
+      tags:
+        - "Playlist"
+      summary: "Get User Playlist"
+      description: "Retrieve the playlist for a specific user."
+      operationId: "getUserPlaylist"
+      parameters:
+        - name: "userId"
+          in: "path"
+          description: "ID of the user to retrieve the playlist for"
+          required: true
+          schema:
+            type: "string"
+      responses:
+        '200':
+          description: "Successful operation"
+          content:
+            application/json:
+              schema:
+                type: "array"
+                items:
+                  $ref: "#/components/schemas/Playlist"
+        '401':
+          description: "Unauthorized"
+        '404':
+          description: "Playlist not found"   
+  
+  /playlist/getPlaylistbyId/{playlistId}:
+    get:
+      tags:
+        - "Playlist"
+      summary: "Get Playlist by ID"
+      description: "Retrieve a playlist by its ID."
+      operationId: "getPlaylistbyId"
+      parameters:
+        - name: "playlistId"
+          in: "path"
+          description: "ID of the playlist to retrieve"
+          required: true
+          schema:
+            type: "string"
+      responses:
+        '200':
+          description: "Successful operation"
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Playlist"
+        '401':
+          description: "Unauthorized"
+        '404':
+          description: "Playlist not found"        
 
   /comments/add:
     post:
